--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ python:
   - "3.3"
   - "3.4"
 
+install: 
+  - pip install gnupg
+
 script:
-  - python kernelsigntest.py
+  - python kernsigntest.py
